corrigido metodo de update automatico